Ajout de la fonctionnalité : supression d'une offre en tant qu'administrateur